--- a/Frontend/src/app/layouts/main-layout/ui/style.module.scss
+++ b/Frontend/src/app/layouts/main-layout/ui/style.module.scss
@@ -11,17 +11,15 @@
 }
 
 .content {
-    width: calc(100% - var(--sidebar-item-wh) - var(--sidebar-padding) * 2);
     background-color: #e4e8f1;
     border-top-left-radius: min(28px, 1.75em);
-    flex: 1 0 0;
+    flex: 1 0 auto;
     height: 100%;
 }
 
 @media only screen and (max-width: 767px) {
     .content {
         width: 100%;
-        overflow-y: auto;
     }
 }
 
