--- a/Frontend/src/features/header/profile-link/styles.module.scss
+++ b/Frontend/src/features/header/profile-link/styles.module.scss
@@ -10,7 +10,7 @@
     }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (width <= 768px) {
     .header__profile {
         width: min(60px, 3.75em);
     }
