--- a/Frontend/src/pages/profile-page/ui/style.module.scss
+++ b/Frontend/src/pages/profile-page/ui/style.module.scss
@@ -7,7 +7,7 @@
     grid-row-gap: 30px;
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (width <= 1300px) {
     .profile {
         grid-template-columns: repeat(1, 100%);
         grid-template-rows: repeat(3, min-content);
