--- a/Frontend/src/widgets/Header/ui/style.module.scss
+++ b/Frontend/src/widgets/Header/ui/style.module.scss
@@ -7,7 +7,7 @@
     gap: min(60px, 3.75em);
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (width <= 768px) {
     .header {
         padding-right: min(20px, 1.25em);
         gap: 20px;
