--- a/Frontend/src/entities/product/ui/profile-product-card/style.module.scss
+++ b/Frontend/src/entities/product/ui/profile-product-card/style.module.scss
@@ -28,6 +28,9 @@
 
     & img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
     }
 }
 @media only screen and (width <= 768px) {
@@ -41,6 +44,14 @@
     font-size: 2rem;
     font-weight: 500;
     color: #000;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
 }
 
 @media only screen and (width <= 768px) {
