--- a/Frontend/src/features/header/profile-link/styles.module.scss
+++ b/Frontend/src/features/header/profile-link/styles.module.scss
@@ -7,6 +7,9 @@
 
     & img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
     }
 }
 
