--- a/Frontend/src/pages/profile-page/ui/profile-user-card/style.module.scss
+++ b/Frontend/src/pages/profile-page/ui/profile-user-card/style.module.scss
@@ -32,6 +32,9 @@
 
     & * {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
         background-color: #f2f2f2;
     }
 }
