--- a/Frontend/src/features/profile/profile-product-slider/ui/style.module.scss
+++ b/Frontend/src/features/profile/profile-product-slider/ui/style.module.scss
@@ -52,3 +52,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.products__addProductLink {
+    color: #4994b9;
+    text-decoration: underline;
+}
