--- a/Frontend/src/app/layouts/main-layout/ui/style.module.scss
+++ b/Frontend/src/app/layouts/main-layout/ui/style.module.scss
@@ -1,5 +1,3 @@
-@use '../../../../shared/styles/vars.scss' as *;
-
 .main {
     display: flex;
     flex: 1 0 0;
@@ -13,8 +11,6 @@
 }
 
 .content {
-    --sidebar-item-wh: #{$sidebar-item-wh};
-    --sidebar-padding: #{$sidebar-padding};
     background-color: #e4e8f1;
     border-top-left-radius: min(28px, 1.75em);
     flex: 1 0 auto;
@@ -33,4 +29,10 @@
     height: 100%;
     border-radius: min(28px, 1.75em);
     overflow-y: auto;
+}
+
+@media only screen and (width <= 768px) {
+    .content__layout {
+        height: calc(100% - var(--sidebar-item-wh) - var(--sidebar-padding) * 2);
+    }
 }
