--- a/Frontend/src/features/profile/profile-user-card/style.module.scss
+++ b/Frontend/src/features/profile/profile-user-card/style.module.scss
@@ -1,4 +1,5 @@
-.profile__info {
+.profile__info,
+.profile__loader {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -10,7 +11,8 @@
 }
 
 @media only screen and (width <= 1300px) {
-    .profile__info {
+    .profile__info,
+    .profile__loader {
         grid-area: 1 / 1 / 1 / 1;
         gap: min(30px, 1.875em);
         border-radius: 20px;
@@ -22,6 +24,10 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+}
+
+.profile__loader {
+    justify-content: center;
 }
 
 .profile__image {
