--- a/Frontend/src/pages/profile-page/ui/style.module.scss
+++ b/Frontend/src/pages/profile-page/ui/style.module.scss
@@ -7,6 +7,7 @@
     grid-row-gap: 30px;
     max-width: 1780px;
     margin: 0 auto;
+    height: 100%;
 }
 
 @media only screen and (width <= 1300px) {
