--- a/Frontend/src/pages/feed-page/ui/feed-product-item/style.module.scss
+++ b/Frontend/src/pages/feed-page/ui/feed-product-item/style.module.scss
@@ -24,8 +24,8 @@
     align-items: center;
     flex: 0 0 auto;
 
-    width: 256px;
-    height: 256px;
+    max-width: 256px;
+    width: 100%;
 
     border-radius: 24px;
     overflow: hidden;
@@ -35,8 +35,7 @@
 
 @media only screen and (width <= 992px) {
     .card__left {
-        width: 340px;
-        height: 256px;
+        max-width: 340px;
         flex: 1 0 auto;
     }
 }
@@ -136,5 +135,12 @@
     .card__button {
         font-size: min(32px, 2rem);
         margin-top: 20px;
+    }
+}
+
+@media only screen and (width <= 768px) {
+    .card__button {
+        padding: 15px 20px;
+        border-radius: 30px;
     }
 }
