--- a/Frontend/src/features/profile/profile-product-card/style.module.scss
+++ b/Frontend/src/features/profile/profile-product-card/style.module.scss
@@ -1,6 +1,5 @@
 .product__item {
-    width: 350px;
-    height: 350px;
+    max-width: 350px;
     border-radius: 30px;
     background-color: #f2f2f2;
     padding: 20px 30px 25px;
@@ -10,15 +9,16 @@
 }
 @media only screen and (width <= 768px) {
     .product__item {
-        width: 200px;
-        height: 200px;
-        padding: 20px;
+        max-width: 200px;
+        padding: 10px;
+        border-radius: 15px;
     }
 }
 
 .product__image {
-    width: 295px;
-    height: 250px;
+    max-width: 295px;
+    width: 100%;
+    aspect-ratio: 1.18;
     border-radius: 30px;
     background-color: #889fc9;
     overflow: hidden;
@@ -26,7 +26,10 @@
     justify-content: center;
     align-items: center;
 
-    & img {
+    align-self: center;
+
+    & img,
+    & svg {
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -35,8 +38,8 @@
 }
 @media only screen and (width <= 768px) {
     .product__image {
-        width: 150px;
-        height: 150px;
+        aspect-ratio: 16 / 9;
+        border-radius: 10px;
     }
 }
 
@@ -52,6 +55,8 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     line-clamp: 2;
+
+    height: 2lh;
 
     text-wrap: balance;
 }
