--- a/Frontend/src/features/profile/profile-user-card/style.module.scss
+++ b/Frontend/src/features/profile/profile-user-card/style.module.scss
@@ -19,10 +19,9 @@
     }
 }
 
-@media only screen and (width <= 768px) {
+@media only screen and (width <= 630px) {
     .profile__info {
-        flex-wrap: wrap;
-        justify-content: center;
+        flex-direction: column;
     }
 }
 
@@ -32,11 +31,13 @@
 
 .profile__image {
     max-width: 332px;
+    min-width: 200px;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
     overflow: hidden;
 
-    & * {
+    & img,
+    & svg {
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -48,6 +49,7 @@
 @media only screen and (width <= 768px) {
     .profile__image {
         max-width: 200px;
+        min-width: 100px;
     }
 }
 
