--- a/Frontend/src/pages/feed-page/ui/feed-product-item/style.module.scss
+++ b/Frontend/src/pages/feed-page/ui/feed-product-item/style.module.scss
@@ -13,8 +13,8 @@
 
 @media only screen and (width <= 992px) {
     .card {
-        flex-wrap: wrap;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -57,6 +57,7 @@
 .card__right {
     display: flex;
     flex-direction: column;
+    flex: 1 1 auto;
 }
 
 @media only screen and (width <= 992px) {
