--- a/Frontend/src/pages/profile-page/ui/profile-features-card/style.module.scss
+++ b/Frontend/src/pages/profile-page/ui/profile-features-card/style.module.scss
@@ -40,7 +40,7 @@
 }
 
 .features__item::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     width: 20px;
@@ -52,6 +52,13 @@
     left: 0;
 }
 
+@media only screen and (width <= 992px) {
+    .features__item::before {
+        width: 15px;
+        height: 15px;
+    }
+}
+
 @media only screen and (width <= 768px) {
     .features__item::before {
         width: 10px;
@@ -61,13 +68,20 @@
 
 .features__item,
 .features__item a {
-    font-size: 2.25rem;
+    font-size: 2rem;
     font-weight: 500;
     color: #000;
 }
 
 .features__item a:hover {
     text-decoration: underline;
+}
+
+@media only screen and (width <= 992px) {
+    .features__item,
+    .features__item a {
+        font-size: 1.5rem;
+    }
 }
 
 @media only screen and (width <= 768px) {
