--- a/Frontend/src/shared/ui/Logo/style.module.scss
+++ b/Frontend/src/shared/ui/Logo/style.module.scss
@@ -6,7 +6,8 @@
 
     width: min(100px, 6.25em);
 
-    & img {
+    & img,
+    & svg {
         width: 100%;
         height: 100%;
         object-fit: cover;
