--- a/Frontend/src/widgets/Header/ui/profile-link/styles.module.scss
+++ b/Frontend/src/widgets/Header/ui/profile-link/styles.module.scss
@@ -5,7 +5,8 @@
 
     width: min(80px, 5em);
 
-    & img {
+    & img,
+    & svg {
         width: 100%;
         height: 100%;
         object-fit: cover;
