--- a/Frontend/src/features/profile/profile-user-card/style.module.scss
+++ b/Frontend/src/features/profile/profile-user-card/style.module.scss
@@ -95,3 +95,29 @@
         }
     }
 }
+
+.profile__errorWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #fff;
+
+    border-radius: 42px;
+    padding: 20px 20px 30px;
+
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+@media only screen and (width <= 1300px) {
+    .profile__errorWrapper {
+        grid-area: 1 / 1 / 1 / 1;
+        justify-content: flex-start;
+    }
+}
+
+.profile__error {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: red;
+}
