--- a/Frontend/src/pages/profile-page/ui/profile-features-card/style.module.scss
+++ b/Frontend/src/pages/profile-page/ui/profile-features-card/style.module.scss
@@ -40,7 +40,7 @@
 }
 
 .features__item::before {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     width: 20px;
