--- a/Frontend/src/pages/feed-page/ui/style.module.scss
+++ b/Frontend/src/pages/feed-page/ui/style.module.scss
@@ -30,18 +30,31 @@
 }
 
 .feed__header {
-    color: #000000;
-    font-size: min(36px, 2.25rem);
-    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 30px;
 
-    overflow: hidden;
-    text-overflow: ellipsis;
+    h2 {
+        color: #000000;
+        font-size: min(36px, 2.25rem);
+        font-weight: 600;
 
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
-    line-clamp: 1;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+        line-clamp: 1;
+    }
+}
+
+@media only screen and (width <= 576px) {
+    .feed__header {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
 }
 
 .feed__item {
@@ -49,4 +62,18 @@
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.feed__button {
+    padding: 10px 20px;
+    font-size: 1rem;
+    text-wrap: nowrap;
+}
+
+.button_group {
+    margin-top: 30px;
+
+    display: flex;
+    justify-content: center;
+    gap: 30px;
 }
