--- a/Frontend/src/features/profile/profile-product-card/style.module.scss
+++ b/Frontend/src/features/profile/profile-product-card/style.module.scss
@@ -28,12 +28,16 @@
 
     align-self: center;
 
+    user-select: none;
+
     & img,
     & svg {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
+
+        pointer-events: none;
     }
 }
 @media only screen and (width <= 768px) {
