--- a/Frontend/src/features/profile/profile-user-card/style.module.scss
+++ b/Frontend/src/features/profile/profile-user-card/style.module.scss
@@ -36,6 +36,8 @@
     border-radius: 50%;
     overflow: hidden;
 
+    user-select: none;
+
     & img,
     & svg {
         width: 100%;
@@ -43,6 +45,8 @@
         object-fit: cover;
         object-position: center;
         background-color: #f2f2f2;
+
+        pointer-events: none;
     }
 }
 
