--- a/Frontend/src/pages/view-product-page/ui/style.module.scss
+++ b/Frontend/src/pages/view-product-page/ui/style.module.scss
@@ -30,6 +30,7 @@
 @media only screen and (max-width: 992px) {
     .product__content {
         grid-template-columns: 1fr;
+        justify-items: center;
     }
 }
 
@@ -44,9 +45,16 @@
 
     grid-area: 1 / 1 / 2 / 2;
 
-    & img {
+    user-select: none;
+
+    & img,
+    & svg {
         width: 100%;
-        object-fit: scale-down;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+
+        pointer-events: none;
     }
 }
 
@@ -91,10 +99,20 @@
     flex: 1 0 auto;
     max-width: 120px;
 
-    background-color: #d9d9d9;
+    background: linear-gradient(#4dc5a5, #8da1d0);
 
-    & img {
+    cursor: pointer;
+
+    user-select: none;
+
+    & img,
+    & svg {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+
+        pointer-events: none;
     }
 }
 @media only screen and (max-width: 1440px) {
@@ -162,27 +180,36 @@
 @media only screen and (max-width: 992px) {
     .product__buttons {
         grid-area: auto;
-        flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
+        max-width: 75%;
+        width: 100%;
+    }
+}
+
+@media only screen and (width <= 576px) {
+    .product__buttons {
+        max-width: 100%;
     }
 }
 
 .product__button {
     padding: 20px 60px;
-    max-width: 380px;
+    max-width: 450px;
     text-wrap: nowrap;
+    flex: 1 1 auto;
 }
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (max-width: 1600px) {
     .product__button {
         padding: 20px 40px;
         font-size: 24px;
     }
 }
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 1350px) {
     .product__button {
-        padding: 20px 30px;
+        padding: 15px 20px;
         font-size: 20px;
     }
 }
