--- a/Frontend/src/widgets/Header/ui/profile-link/styles.module.scss
+++ b/Frontend/src/widgets/Header/ui/profile-link/styles.module.scss
@@ -5,12 +5,16 @@
 
     width: min(80px, 5em);
 
+    user-select: none;
+
     & img,
     & svg {
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
+
+        pointer-events: none;
     }
 }
 
