--- a/Frontend/src/features/auth/login/ui/LoginForm/style.module.scss
+++ b/Frontend/src/features/auth/login/ui/LoginForm/style.module.scss
@@ -1,3 +1,13 @@
+.form__container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 0;
+    justify-content: center;
+
+    padding: 50px;
+}
 .form {
     display: flex;
     flex-direction: column;
