--- a/Frontend/src/features/auth/registration/ui/RegistrationForm/style.module.scss
+++ b/Frontend/src/features/auth/registration/ui/RegistrationForm/style.module.scss
@@ -1,3 +1,14 @@
+.form__container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 0;
+    justify-content: center;
+
+    padding: 50px;
+}
+
 .form {
     display: flex;
     flex-direction: column;
@@ -59,4 +70,26 @@
         color: inherit;
         text-decoration: underline;
     }
+}
+
+.agreement {
+    display: none;
+    margin-top: 30px;
+
+    font-size: min(12px, 0.75rem);
+    font-weight: 400;
+    color: #4994b9;
+    text-align: center;
+}
+
+@media only screen and (width <= 1200px) {
+    .agreement {
+        display: block;
+    }
+}
+
+.agreement__link {
+    text-decoration: underline;
+
+    cursor: pointer;
 }
